@@ -1,0 +1,8 @@
+Received: from MGCQUESCOM01 ([192.168.26.22]) by mgc2k304.MGC75.lan with Microsoft SMTPSVC(6.0.3790.3959);
+	 Fri, 22 Aug 2008 10:39:07 +0200
+Date: Fri, 22 Aug 2008 10:42:55 +0000
+From: example@example.com
+Subject: Un Fax a été émis
+To: example@example.com
+X-Mailer: <Quescom's EMailMgr module version 1.00>
+MIME-Version: 1.0
